--- a/packages/react-native-compatibility-check/package.json
+++ b/packages/react-native-compatibility-check/package.json
@@ -22,7 +22,7 @@
     "node": ">= 20.19.4"
   },
   "exports": {
-    ".": "./src/index.js",
+    ".": "./dist/index.js",
     "./package.json": "./package.json"
   },
   "files": [
